--- a/ts-price-service/src/main/resources/application.yml
+++ b/ts-price-service/src/main/resources/application.yml
@@ -1,22 +1,23 @@
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:127.0.0.1:8848}
   application:
     name: ts-price-service
   datasource:
-    url: jdbc:mysql://${PRICE_MYSQL_HOST:10.176.122.1}:${PRICE_MYSQL_PORT:3306}/${PRICE_MYSQL_DATABASE:ts}?useSSL=false
+    url: jdbc:mysql://${PRICE_MYSQL_HOST}:${PRICE_MYSQL_PORT:3306}/${PRICE_MYSQL_DATABASE:ts}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${PRICE_MYSQL_USER:root}
-    password: ${PRICE_MYSQL_PASSWORD:Abcd1234#}
+    password: ${PRICE_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
 
 # HTTP Server
 server:
