--- a/ts-discovery-service/pom.xml
+++ b/ts-discovery-service/pom.xml
@@ -2,47 +2,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>ts-service</artifactId>
+        <groupId>org.services</groupId>
+        <version>0.1.0</version>
+    </parent>
 
-    <groupId>fdse.microservice</groupId>
-    <artifactId>ts-gateway-service</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>fdse.services</groupId>
+    <artifactId>ts-discovery-service</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
-
-    <name>ts-gateway-service</name>
-
-    <parent>
-        <groupId>org.services</groupId>
-        <artifactId>ts-service</artifactId>
-        <version>0.1.0</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+    <description>Discover Server</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
     </properties>
 
-
     <dependencies>
-
-        <!--        网关相关依赖          -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-
-        <!--        Sentinel相关依赖          -->
         <dependency>
-            <groupId>com.alibaba.csp</groupId>
-            <artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -51,5 +46,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
