--- a/ts-station-service/src/main/resources/application.yml
+++ b/ts-station-service/src/main/resources/application.yml
@@ -1,22 +1,27 @@
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-station-service
   datasource:
-    url: jdbc:mysql://${STATION_MYSQL_HOST:ts-station-mysql}:${STATION_MYSQL_PORT:3306}/${STATION_MYSQL_DATABASE:ts-station-mysql}?useSSL=false
+    url: jdbc:mysql://${STATION_MYSQL_HOST:ts-price-mysql}:${STATION_MYSQL_PORT:3306}/${STATION_MYSQL_DATABASE:ts-price-mysql}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${STATION_MYSQL_USER:root}
-    password: ${STATION_MYSQL_PASSWORD:Abcd1234#}
+    password: ${STATION_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
-
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
 # HTTP Server
 server:
   port: 12345  # HTTP (Tomcat) port
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
+
 
 swagger:
   controllerPackage: fdse.microservice
