--- a/ts-train-food-service/pom.xml
+++ b/ts-train-food-service/pom.xml
@@ -26,6 +26,10 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
     <packaging>jar</packaging>
