--- a/ts-train-food-service/src/main/resources/application.yml
+++ b/ts-train-food-service/src/main/resources/application.yml
@@ -2,16 +2,12 @@ server:
   port: 19999
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-train-food-service
   datasource:
-    url: jdbc:mysql://${TRAIN_FOOD_MYSQL_HOST:ts-train-food-mysql}:${TRAIN_FOOD_MYSQL_PORT:3306}/${TRAIN_FOOD_MYSQL_DATABASE:ts-train-food-mysql}?useSSL=false
+    url: jdbc:mysql://${TRAIN_FOOD_MYSQL_HOST:ts-price-mysql}:${TRAIN_FOOD_MYSQL_PORT:3306}/${TRAIN_FOOD_MYSQL_DATABASE:ts-price-mysql}?allowPublicKeyRetrieval=true&?useSSL=false
     username: ${TRAIN_FOOD_MYSQL_USER:root}
-    password: ${TRAIN_FOOD_MYSQL_PASSWORD:root}
+    password: ${TRAIN_FOOD_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -19,7 +15,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
 swagger:
   controllerPackage: trainFood.controller
