--- a/ts-order-other-service/src/main/resources/application.yml
+++ b/ts-order-other-service/src/main/resources/application.yml
@@ -3,24 +3,20 @@ server:
   port: 12032  # HTTP (Tomcat) port
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-order-other-service
   datasource:
 #    url: jdbc:mysql://localhost:3306/ts-order-other-mysql?useSSL=false
-    url: jdbc:mysql://${ORDER_OTHER_MYSQL_HOST:ts-order-other-mysql}:${ORDER_OTHER_MYSQL_PORT:3306}/${ORDER_OTHER_MYSQL_DATABASE:ts-order-other-mysql}?useSSL=false
+    url: jdbc:mysql://${ORDER_OTHER_MYSQL_HOST:ts-price-mysql}:${ORDER_OTHER_MYSQL_PORT:3306}/${ORDER_OTHER_MYSQL_DATABASE:ts}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${ORDER_OTHER_MYSQL_USER:root}
-    password: ${ORDER_OTHER_MYSQL_PASSWORD:root}
+    password: ${ORDER_OTHER_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 #    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
 
@@ -47,6 +43,12 @@ spring:
 #          destination: ts-order-other-exchange
 #          contentType: application/json
 #          binder: rabbit
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
+
 
 swagger:
   controllerPackage: other.controller
