--- a/ts-auth-service/src/main/resources/application.yaml
+++ b/ts-auth-service/src/main/resources/application.yaml
@@ -10,14 +10,14 @@ spring:
   datasource:
     url: jdbc:mysql://${AUTH_MYSQL_HOST:ts-auth-mysql}:${AUTH_MYSQL_PORT:3306}/${AUTH_MYSQL_DATABASE:ts-auth-mysql}?useSSL=false
     username: ${AUTH_MYSQL_USER:root}
-    password: ${AUTH_MYSQL_PASSWORD:Abcd1234#}
+    password: ${AUTH_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
 
 swagger:
