--- a/ts-basic-service/src/main/resources/application.yml
+++ b/ts-basic-service/src/main/resources/application.yml
@@ -2,12 +2,15 @@ server:
   port: 15680
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-basic-service
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
+
 
 swagger:
   controllerPackage: fdse.microservice.controller
