--- a/ts-consign-price-service/src/main/resources/application.yml
+++ b/ts-consign-price-service/src/main/resources/application.yml
@@ -8,14 +8,14 @@ spring:
   datasource:
     url: jdbc:mysql://${CONSIGN_PRICE_MYSQL_HOST:ts-consign-price-mysql}:${CONSIGN_PRICE_MYSQL_PORT:3306}/${CONSIGN_PRICE_MYSQL_DATABASE:ts-consign-price-mysql}?useSSL=false
     username: ${CONSIGN_PRICE_MYSQL_USER:root}
-    password: ${CONSIGN_PRICE_MYSQL_PASSWORD:Abcd1234#}
+    password: ${CONSIGN_PRICE_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
 
 # HTTP Server
