--- a/ts-inside-payment-service/src/main/resources/application.yml
+++ b/ts-inside-payment-service/src/main/resources/application.yml
@@ -12,14 +12,14 @@ spring:
   datasource:
     url: jdbc:mysql://${INSIDE_PAYMENT_MYSQL_HOST:ts-inside-payment-mysql}:${INSIDE_PAYMENT_MYSQL_PORT:3306}/${INSIDE_PAYMENT_MYSQL_DATABASE:ts-inside-payment-mysql}?useSSL=false
     username: ${INSIDE_PAYMENT_MYSQL_USER:root}
-    password: ${INSIDE_PAYMENT_MYSQL_PASSWORD:Abcd1234#}
+    password: ${INSIDE_PAYMENT_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
 
 swagger:
