--- a/ts-order-service/src/main/resources/application.yml
+++ b/ts-order-service/src/main/resources/application.yml
@@ -3,23 +3,26 @@ server:
   port: 12031  # HTTP (Tomcat) port
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:127.0.0.1:8848}
   application:
     name: ts-order-service
   datasource:
-    url: jdbc:mysql://${ORDER_MYSQL_HOST:10.176.122.1}:${ORDER_MYSQL_PORT:3306}/${ORDER_MYSQL_DATABASE:ts}?useSSL=false
+    url: jdbc:mysql://${ORDER_MYSQL_HOST}:${ORDER_MYSQL_PORT:3306}/${ORDER_MYSQL_DATABASE:ts}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${ORDER_MYSQL_USER:root}
-    password: ${ORDER_MYSQL_PASSWORD:Abcd1234#}
+    password: ${ORDER_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
+
 
 swagger:
   controllerPackage: order.controller
