--- a/ts-station-food-service/src/main/resources/application.yml
+++ b/ts-station-food-service/src/main/resources/application.yml
@@ -12,14 +12,14 @@ spring:
 #    url: jdbc:mysql://localhost:3306/ts-station-food-mysql?useSSL=false
     url: jdbc:mysql://${STATION_FOOD_MYSQL_HOST:10.176.122.1}:${STATION_FOOD_MYSQL_PORT:3306}/${STATION_FOOD_MYSQL_DATABASE:ts}?useSSL=false
     username: ${STATION_FOOD_MYSQL_USER:root}
-    password: ${STATION_FOOD_MYSQL_PASSWORD:Abcd1234#}
+    password: ${STATION_FOOD_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
 swagger:
   controllerPackage: food.controller
