--- a/ts-travel2-service/src/main/resources/application.yml
+++ b/ts-travel2-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://${TRAVEL2_MYSQL_HOST:ts-travel2-mysql}:${TRAVEL2_MYSQL_PORT:3306}/${TRAVEL2_MYSQL_DATABASE:ts-travel2-mysql}?useSSL=false
     username: ${TRAVEL2_MYSQL_USER:root}
-    password: ${TRAVEL2_MYSQL_PASSWORD:Abcd1234#}
+    password: ${TRAVEL2_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -20,6 +20,6 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 swagger:
   controllerPackage: travel2.controller
