--- a/ts-admin-user-service/src/main/resources/application.yml
+++ b/ts-admin-user-service/src/main/resources/application.yml
@@ -2,12 +2,14 @@ server:
   port: 16115
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-admin-user-service
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
 
 swagger:
   controllerPackage: adminuser.controller
