--- a/ts-user-service/pom.xml
+++ b/ts-user-service/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>ts-common</artifactId>
             <version>0.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
