--- a/ts-user-service/src/main/resources/application.yaml
+++ b/ts-user-service/src/main/resources/application.yaml
@@ -2,14 +2,10 @@ server:
   port: 12342
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-user-service
   datasource:
-    url: jdbc:mysql://${USER_MYSQL_HOST:ts-user-mysql}:${USER_MYSQL_PORT:3306}/${USER_MYSQL_DATABASE:ts-user-mysql}?useSSL=false
+    url: jdbc:mysql://${USER_MYSQL_HOST:ts-user-mysql}:${USER_MYSQL_PORT:3306}/${USER_MYSQL_DATABASE:ts-user-mysql}?useSSL=false&allowPublicKeyRetrieval=true
     username: ${USER_MYSQL_USER:root}
     password: ${USER_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -20,6 +16,11 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
 
 swagger:
   controllerPackage: user.controller
