--- a/ts-execute-service/src/main/resources/application.yml
+++ b/ts-execute-service/src/main/resources/application.yml
@@ -2,11 +2,12 @@ server:
   port: 12386
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-execute-service
 swagger:
   controllerPackage: execute.controller
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://ts-discovery-service:8761/eureka/
