--- a/ts-travel-service/src/main/resources/application.yml
+++ b/ts-travel-service/src/main/resources/application.yml
@@ -3,16 +3,12 @@ server:
   port: 12346  # HTTP (Tomcat) port
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-travel-service
   datasource:
-    url: jdbc:mysql://${TRAVEL_MYSQL_HOST:ts-travel-mysql}:${TRAVEL_MYSQL_PORT:3306}/${TRAVEL_MYSQL_DATABASE:ts-travel-mysql}?useSSL=false
+    url: jdbc:mysql://${TRAVEL_MYSQL_HOST:ts-travel-mysql}:${TRAVEL_MYSQL_PORT:3306}/${TRAVEL_MYSQL_DATABASE:ts}?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: ${TRAVEL_MYSQL_USER:root}
-    password: ${TRAVEL_MYSQL_PASSWORD:root}
+    password: ${TRAVEL_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -24,6 +20,11 @@ spring:
 
 swagger:
   controllerPackage: travel.controller
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:ts-discovery-service:8761}/eureka/
 
 train-service:
   url: http://${TRAIN_SERVICE_HOST:ts-train-service}:${TRAIN_SERVICE_PORT:14567}
