--- a/ts-travel2-service/src/main/resources/application.yml
+++ b/ts-travel2-service/src/main/resources/application.yml
@@ -3,14 +3,10 @@ server:
   port: 16346  # HTTP (Tomcat) port
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-travel2-service
   datasource:
-    url: jdbc:mysql://${TRAVEL2_MYSQL_HOST:ts-travel2-mysql}:${TRAVEL2_MYSQL_PORT:3306}/${TRAVEL2_MYSQL_DATABASE:ts-travel2-mysql}?useSSL=false
+    url: jdbc:mysql://${TRAVEL2_MYSQL_HOST:ts-travel2-mysql}:${TRAVEL2_MYSQL_PORT:3306}/${TRAVEL2_MYSQL_DATABASE:ts}?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true
     username: ${TRAVEL2_MYSQL_USER:root}
     password: ${TRAVEL2_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -23,3 +19,8 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
 swagger:
   controllerPackage: travel2.controller
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://ts-discovery-service:8761/eureka/
